@@ -7149,6 +7149,9 @@ variable $0$) of the \kbd{ZM} $M$.
 (in variable $0$) of the \kbd{QM} $M$, assuming that the result has integer
 coefficients.
 
+\fun{GEN}{QM_charpoly_ZX_bound}{GEN M, long b} as \tet{QM_charpoly_ZX}
+assuming that the sup norm of the (integral) result is $\leq 2^b$.
+
 \fun{GEN}{ZM_imagecompl}{GEN x} returns \kbd{matimagecompl(x)}.
 
 \fun{long}{ZM_rank}{GEN x} returns \kbd{matrank(x)}.
