@@ -457,6 +457,7 @@ BA 171- [libpari] get_FpX_algebra, get_FpXQ_algebra,  get_FpXQX_algebra,
 BA 173- [libpari] ZpXQ_div, ZpXQX_divrem, ZpXQX_digits
    174- [libpari] ZX_deflate_max, ZX_deflate_order
    175- [libpari] idealinv_HNF, idealinv_HNF_Z
+   176- [libpari] QM_charpoly_ZX_bound
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
